{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 14,
  "lineage": "913c5bd5-2d26-1ab0-bb46-33284e2fd63c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09a1dec760d7cabee",
            "arn": "arn:aws:ec2:ap-south-1:199537923785:elastic-ip/eipalloc-09a1dec760d7cabee",
            "association_id": "eipassoc-0b740969ee6a6dfa4",
            "domain": "vpc",
            "id": "eipalloc-09a1dec760d7cabee",
            "instance": "i-0dfd473132da16d54",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0cfeb4d8604651caf",
            "private_dns": "ip-10-0-1-147.ap-south-1.compute.internal",
            "private_ip": "10.0.1.147",
            "public_dns": "ec2-13-202-22-95.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.202.22.95",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "event-registration-eip"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "event-registration-eip",
              "Project": "Event-Registration-Management"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.app_server",
            "aws_internet_gateway.main",
            "aws_key_pair.main",
            "aws_security_group.app_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available",
            "tls_private_key.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ff91eb5c6fe7cc86",
            "arn": "arn:aws:ec2:ap-south-1:199537923785:instance/i-0dfd473132da16d54",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dfd473132da16d54",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "event-registration-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cfeb4d8604651caf",
            "private_dns": "ip-10-0-1-147.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.147",
            "public_dns": "ec2-3-110-143-74.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.110.143.74",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "Environment": "staging",
                  "ManagedBy": "Terraform",
                  "Project": "Event-Registration-Management"
                },
                "throughput": 125,
                "volume_id": "vol-0471d483aad794a27",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cc0f8627e0573055",
            "tags": {
              "Name": "event-registration-server"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "event-registration-server",
              "Project": "Event-Registration-Management"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08633f2360f5c5031"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_key_pair.main",
            "aws_security_group.app_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available",
            "tls_private_key.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:199537923785:internet-gateway/igw-05bc684bcbf777e93",
            "id": "igw-05bc684bcbf777e93",
            "owner_id": "199537923785",
            "tags": {
              "Name": "event-registration-igw"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "event-registration-igw",
              "Project": "Event-Registration-Management"
            },
            "vpc_id": "vpc-0a6558e6d6fb40482"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:199537923785:route-table/rtb-0250e10aafd285deb",
            "id": "rtb-0250e10aafd285deb",
            "owner_id": "199537923785",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05bc684bcbf777e93",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "event-registration-rt"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "event-registration-rt",
              "Project": "Event-Registration-Management"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6558e6d6fb40482"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9ffb1b62e377f12",
            "route_table_id": "rtb-0250e10aafd285deb",
            "subnet_id": "subnet-0cc0f8627e0573055"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:199537923785:security-group/sg-08633f2360f5c5031",
            "description": "Security group for Event Registration app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08633f2360f5c5031",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5173,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5173
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "event-registration-sg",
            "name_prefix": "",
            "owner_id": "199537923785",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "event-registration-sg"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "event-registration-sg",
              "Project": "Event-Registration-Management"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6558e6d6fb40482"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:199537923785:subnet/subnet-0cc0f8627e0573055",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc0f8627e0573055",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "199537923785",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "event-registration-public-subnet"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "event-registration-public-subnet",
              "Project": "Event-Registration-Management"
            },
            "vpc_id": "vpc-0a6558e6d6fb40482"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:199537923785:vpc/vpc-0a6558e6d6fb40482",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d4e459bf397ac470",
            "default_route_table_id": "rtb-0ad0aebb5f3092a06",
            "default_security_group_id": "sg-0047d8bb36f196a3e",
            "dhcp_options_id": "dopt-005c7b3d92e74ba86",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a6558e6d6fb40482",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ad0aebb5f3092a06",
            "owner_id": "199537923785",
            "tags": {
              "Name": "event-registration-vpc"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "event-registration-vpc",
              "Project": "Event-Registration-Management"
            }
          }
        }
      ]
    }
  ]
}